--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 customtkinter==5.2.2
 darkdetect==0.8.0
+et_xmlfile==2.0.0
 future==1.0.0
 numpy==2.2.0
+openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
 python-dateutil==2.9.0.post0
