--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ numpy==2.2.0
 openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
+pyglet==2.0.20
 python-dateutil==2.9.0.post0
 pytz==2024.2
 six==1.17.0
